--- a/Resources/skeleton/crud/actions/create.php.twig
+++ b/Resources/skeleton/crud/actions/create.php.twig
@@ -35,7 +35,7 @@
 
             $this->get('session')->getFlashBag()->add(
                 'error',
-                'There is a error in the form. Check below.'
+                'There is an error in the form. Check below.'
             );
 
         }
