--- a/Resources/skeleton/crud-odm/actions/create.php.twig
+++ b/Resources/skeleton/crud-odm/actions/create.php.twig
@@ -20,16 +20,30 @@
             $dm->persist($record);
             $dm->flush();
 
-            $this->get('session')->getFlashBag()->add(
-                'success',
-                'The record was successfully created.'
-            );
+            echo '<pre>'; print_r($request); exit;
             
-            {% if 'show' in actions -%}
-                return $this->redirect($this->generateUrl('{{ route_name_prefix }}_show', array('id' => $record->getId())));
-            {%- else -%}
-                return $this->redirect($this->generateUrl('{{ route_name_prefix }}'));
-            {%- endif %}
+            
+            if ($request->request->get('_save_and_add')) {
+            
+                $this->get('session')->getFlashBag()->add(
+                    'success',
+                    'The record was successfully created. Create another below.'
+                );
+                return $this->redirect($this->generateUrl('{{ route_name_prefix }}_new'));
+
+            } else {
+            
+                $this->get('session')->getFlashBag()->add(
+                    'success',
+                    'The record was successfully created.'
+                );
+
+                {% if 'show' in actions -%}
+                    return $this->redirect($this->generateUrl('{{ route_name_prefix }}_show', array('id' => $record->getId())));
+                {%- else -%}
+                    return $this->redirect($this->generateUrl('{{ route_name_prefix }}'));
+                {%- endif %}
+            }
 
         } else {
 
