--- a/Resources/skeleton/crud-odm/actions/update.php.twig
+++ b/Resources/skeleton/crud-odm/actions/update.php.twig
@@ -43,7 +43,7 @@
 
             $this->get('session')->getFlashBag()->add(
                 'error',
-                'There is a error in the form. Check below.'
+                'There is an error in the form. Check below.'
             );
 
         }
