--- a/Resources/skeleton/crud-odm/views/others/delete_form.html.twig.twig
+++ b/Resources/skeleton/crud-odm/views/others/delete_form.html.twig.twig
@@ -3,7 +3,7 @@
 <div id="delete_modal" class="modal hide fade">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>{{ "{{ '%entity% delete'|trans({'%entity%': '" ~ entity ~ "'},'rgoubootstrap') }}" }}</h3>
+        <h3>{{ "{{ 'Delete'|trans({},'rgoubootstrap') }} {{ '" ~ entity ~ "' }}" }}</h3>
     </div>
     <div class="modal-body">
         <p>{{ "{{ 'Are you sure you want delete this record?'|trans({},'rgoubootstrap') }}" }}</p>
