--- a/Resources/skeleton/crud/actions/index.php.twig
+++ b/Resources/skeleton/crud/actions/index.php.twig
@@ -11,15 +11,23 @@
     {
         $em = $this->getDoctrine()->getManager();
 
-        $records = $em->getRepository('{{ bundle }}:{{ entity }}')->findAll();
+        $query = $em->getRepository('{{ bundle }}:{{ entity }}')
+                    ->createQueryBuilder('e')->getQuery();
 
+        $paginator  = $this->get('knp_paginator');
+        $pagination = $paginator->paginate(
+            $query,
+            $this->get('request')->query->get('page', 1),
+            $this->get('request')->query->get('max_per_page', 20)
+        );
+        
 {% if 'annotation' == format %}
         return array(
-            'records' => $records,
+            pagination' => $pagination
         );
 {% else %}
         return $this->render('{{ bundle }}:{{ entity|replace({'\\': '/'}) }}:index.html.twig', array(
-            'records' => $records,
+            'pagination' => $pagination
         ));
 {% endif %}
     }
