--- a/Resources/views/layout_local.html.twig
+++ b/Resources/views/layout_local.html.twig
@@ -35,9 +35,8 @@
             
             <!-- Everything you want hidden at 940px or less, place within here -->
             <div class="nav-collapse collapse">
-                {{ knp_menu_render('main', {'currentClass': 'active', 'template': 'RgouBootstrapBundle:Menu:knp_menu.html.twig'}) }}
-                {{ knp_menu_render('RgouBootstrapBundle:Builder:userMenu', {'currentClass': 'active', 'template': 'RgouBootstrapBundle:Menu:knp_menu.html.twig'}) }}
-                {# knp_menu_render('RgouBootstrapBundle:Builder:mainMenu', {'currentClass': 'active', 'template': 'RgouBootstrapBundle:Menu:knp_menu.html.twig'}) #}
+                {{ knp_menu_render('samplemain') }}
+                {{ knp_menu_render('sampleuser') }}
             </div>            
             
         </div>
