--- a/Resources/skeleton/crud-odm/views/others/actions.html.twig.twig
+++ b/Resources/skeleton/crud-odm/views/others/actions.html.twig.twig
@@ -1,13 +1,8 @@
                 {%- for action in record_actions %}
 
                 <a class="btn btn-mini" href="{{ "{{ path('"~ route_name_prefix ~"_"~ action ~"', { 'id': record.id }) }}" }}">
-                    {% if action == 'edit' %}
-                    <i class="icon-pencil"></i>
-                    {% endif %}
-                    {% if action == 'show' %}
-                    <i class="icon-eye-open"></i>
-                    {% endif %}
-
+                    {% if action == 'edit' %}<i class="icon-pencil"></i>{% endif %}
+                    {% if action == 'show' %}<i class="icon-eye-open"></i>{% endif %}
                     {{ "{{ '" ~ action ~ "'|trans({},'rgoubootstrap') }}" }}
                 </a>
 
