--- a/Resources/views/layout_cdn.html.twig
+++ b/Resources/views/layout_cdn.html.twig
@@ -1,9 +1,11 @@
 {% extends 'RgouBootstrapBundle::base.html.twig' %}
 
 {% block head_stylesheets %}
-        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" type="text/css" rel="stylesheet" media="screen" />
-        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet" media="screen" />
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="//fuelcdn.com/fuelux/2.3/css/fuelux.css" type="text/css" rel="stylesheet" media="screen" />
+        <link href="//fuelcdn.com/fuelux/2.3/css/fuelux-responsive.css" type="text/css" rel="stylesheet" media="screen" />
         <link href="{{ asset('bundles/rgoubootstrap/css/main.css') }}" type="text/css" rel="stylesheet" media="screen" />
 {% endblock head_stylesheets %}
 
@@ -40,5 +42,6 @@
 {% block footer_javascripts %}
         <script type="text/javascript" src="//code.jquery.com/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="//fuelcdn.com/fuelux/2.3/loader.min.js"></script>
 {% endblock footer_javascripts %}     
 
