--- a/Resources/views/layout_local.html.twig
+++ b/Resources/views/layout_local.html.twig
@@ -5,6 +5,8 @@
     'bundles/rgoubootstrap/bootstrap/css/bootstrap-combined.no-icons.min.css'
     'bundles/rgoubootstrap/bootstrap/css/bootstrap-responsive.min.css'
     'bundles/rgoubootstrap/font-awesome/css/font-awesome.min.css'
+    'bundles/rgoubootstrap/fuelux/css/fuelux.min.css'
+    'bundles/rgoubootstrap/fuelux/css/fuelux-responsive.min.css'
     'bundles/rgoubootstrap/css/main.css'
     output='css/compiled.css'
     filter='cssrewrite' 
@@ -48,6 +50,7 @@
     {% javascripts
         'bundles/rgoubootstrap/js/jquery.min.js'
         'bundles/rgoubootstrap/bootstrap/js/bootstrap.min.js'
+        'bundles/rgoubootstrap/fuelux/loader.min.js'
         'bundles/rgoubootstrap/js/main.js'
         filter='yui_js' 
         output='js/compiled.js'
