--- a/Resources/skeleton/crud-odm/actions/delete.php.twig
+++ b/Resources/skeleton/crud-odm/actions/delete.php.twig
@@ -28,14 +28,14 @@
             
             $this->get('session')->getFlashBag()->add(
                 'success',
-                'The record was successfully deleted.'
+                $this->get('translator')->trans('The record was successfully deleted.', array(), 'rgoubootstrap')
             );
 
         } else {
 
             $this->get('session')->getFlashBag()->add(
                 'error',
-                'There is an error on deleting the record.'
+                $this->get('translator')->trans('There is an error on deleting the record.', array(), 'rgoubootstrap')
             );
         }
         
