--- a/Resources/skeleton/crud-odm/actions/show.php.twig
+++ b/Resources/skeleton/crud-odm/actions/show.php.twig
@@ -11,6 +11,16 @@
     {
         $dm = $this->get('doctrine.odm.mongodb.document_manager');
 
+        // Check for autoincrement Id
+        if ($id == (int) $id) {
+            $id = (int) $id;
+        }
+
+        // Check for autoincrement Id
+        if ($id == (int) $id) {
+            $id = (int) $id;
+        }
+
         $record = $dm->getRepository('{{ bundle }}:{{ entity }}')->find($id);
 
         if (!$record) {
