--- a/Resources/skeleton/crud-odm/actions/update.php.twig
+++ b/Resources/skeleton/crud-odm/actions/update.php.twig
@@ -12,6 +12,11 @@
     {
         $dm = $this->get('doctrine.odm.mongodb.document_manager');
 
+        // Check for autoincrement Id
+        if ($id == (int) $id) {
+            $id = (int) $id;
+        }
+
         $record = $dm->getRepository('{{ bundle }}:{{ entity }}')->find($id);
 
         if (!$record) {
@@ -30,7 +35,7 @@
             $dm->flush();
             $this->get('session')->getFlashBag()->add(
                 'success',
-                'The record was successfully updated.'
+                $this->get('translator')->trans('The record was successfully updated.', array(), 'rgoubootstrap')
             );
 
             {% if 'show' in actions -%}
@@ -43,7 +48,7 @@
 
             $this->get('session')->getFlashBag()->add(
                 'error',
-                'There is an error in the form. Check below.'
+                $this->get('translator')->trans('There is an error in the form. Check below.', array(), 'rgoubootstrap')
             );
 
         }
