Add customizeable filters to grid for Doctrine ODM

--- a/Resources/skeleton/crud-odm/actions/delete.php.twig
+++ b/Resources/skeleton/crud-odm/actions/delete.php.twig
@@ -9,6 +9,8 @@
      */
     public function deleteAction($id)
     {
+        
+        
         $form = $this->createDeleteForm($id);
         $request = $this->getRequest();
 
@@ -17,6 +19,9 @@
         if ($form->isValid()) {
             $dm = $this->get('doctrine.odm.mongodb.document_manager');
 
+            $mongodbutil = $this->container->get('rgou_bootstrap.util.mongodb');
+            $id = $mongodbutil->prepareIdForFind($id);
+            
             $record = $dm->getRepository('{{ bundle }}:{{ entity }}')->find($id);
 
             if (!$record) {
