Corrects minor CSS, HTML and MongoDB errors

--- a/Resources/public/css/main.css
+++ b/Resources/public/css/main.css
@@ -50,6 +50,13 @@ opacity: .25;
 }
 
 /* FuelUX Datatable */
-.sortable {
+.sortable:hover {
     cursor: hand;
+}
+.grid-pager input {
+    margin-top: 10px; 
+    text-align: center;
+}
+.grid-controls select{
+    margin: 0;
 }
