--- a/Resources/skeleton/crud-odm/actions/update.php.twig
+++ b/Resources/skeleton/crud-odm/actions/update.php.twig
@@ -26,9 +26,7 @@
         $editForm = $this->createForm(new {{ entity_class }}Type(), $record);
         $deleteForm = $this->createDeleteForm($id);
 
-        $request = $this->getRequest();
-
-        $editForm->bindRequest($request);
+        $editForm->bind($this->getRequest());
 
         if ($editForm->isValid()) {
             $dm->persist($record);
