--- a/Resources/skeleton/crud-odm/views/others/grid.html.twig.twig
+++ b/Resources/skeleton/crud-odm/views/others/grid.html.twig.twig
@@ -7,6 +7,7 @@
 				<div class="datagrid-header-left">
                     <div class="span4">
                         <div class="grid-controls">
+                            <span><span class="grid-start"></span> - <span class="grid-end"></span> {{ "{{ 'of'|trans({}, 'rgoubootstrap') }}" }} <span class="grid-count"></span></span>
                             <select class="grid-pagesize span1">
                                 <option value="10">10</option>
                                 <option value="20">20</option>
@@ -15,9 +16,6 @@
                             </select>
                             <span>{{ "{{ 'per page'|trans({}, 'rgoubootstrap') }}" }}</span>
                         </div>
-                    </div>
-                    <div class="span4">
-                        <span><span class="grid-start"></span> - <span class="grid-end"></span> {{ "{{ 'of'|trans({}, 'rgoubootstrap') }}" }} <span class="grid-count"></span></span>
                     </div>
                 </div>
 				<div class="datagrid-header-right pull-right">
@@ -35,13 +33,12 @@
 		<tr class="well">
 			<th>
                 <div class="span4" style="display:none;">
-                    <div class="grid-pager">
+                    <div class="grid-pager pull-right">
+                        <span><span class="grid-start"></span> - <span class="grid-end"></span> {{ "{{ 'of'|trans({}, 'rgoubootstrap') }}" }} <span class="grid-count"></span></span>
                         <button class="btn grid-prevpage"><i class="icon-chevron-left"></i></button>
                         <span>{{ "{{ 'Page'|trans({}, 'rgoubootstrap') }}" }}</span>
-                        <div class="input-append">
-                            <input class="span1" type="text">
-                        </div>
-                        <span>of <span class="grid-pages"></span></span>
+                        <input class="span1" type="text">
+                        <span>{{ "{{ 'of'|trans({}, 'rgoubootstrap') }}" }} <span class="grid-pages"></span></span>                        
                         <button class="btn grid-nextpage"><i class="icon-chevron-right"></i></button>
                     </div>
                 </div>
