--- a/Resources/skeleton/crud/actions/update.php.twig
+++ b/Resources/skeleton/crud/actions/update.php.twig
@@ -21,9 +21,7 @@
         $editForm   = $this->createForm(new {{ entity_class }}Type(), $record);
         $deleteForm = $this->createDeleteForm($id);
 
-        $request = $this->getRequest();
-
-        $editForm->bindRequest($request);
+        $editForm->bind($this->getRequest());
 
         if ($editForm->isValid()) {
             $em->persist($record);
@@ -44,7 +42,7 @@
 
             $this->get('session')->getFlashBag()->add(
                 'error',
-                'There is a error in the form. Check below.'
+                'There is an error in the form. Check below.'
             );
 
         }
