Adjust some translations

--- a/Resources/skeleton-odm/crud/views/index.html.twig.twig
+++ b/Resources/skeleton-odm/crud/views/index.html.twig.twig
@@ -5,7 +5,7 @@
     {% if 'new' in actions %}
     <small> 
         {% if not 'grid' in actions %}
-            {{ "({% transchoice pagination.totalItemCount with {'%count%': pagination.totalItemCount} from 'rgoubootstrap' %}{0}no records|{1}record|]1,Inf]%count% records{% endtranschoice %})" }}
+            {{ "({% transchoice pagination.totalItemCount with {'%count%': pagination.totalItemCount} from 'rgoubootstrap' %}{0}no records|{1}1 record|]1,Inf]%count% records{% endtranschoice %})" }}
         {% endif %}
         {{ "{{ 'or'|trans({},'rgoubootstrap') }}" }}
         <a title="{{ "{{ 'New'|trans({},'rgoubootstrap') }}" }}" class="btn btn-small" href="{{ "{{ path('"~ route_name_prefix ~"_new') }}" }}">
